--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     ],
     "require": {
         "php": "^7.0",
+        "doctrine/dbal": "^2.9",
         "laravel/framework": "~5.6"
     },
     "require-dev": {
