--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require": {
         "php": "^7.0",
         "doctrine/dbal": "^2.9",
-        "laravel/framework": "~5.6"
+        "laravel/framework": "~5.6",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.1",
